# fastapi-exercise

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose-test.yml  docker-compose.yml
backend/: Dockerfile  backend.dockerfile
backend/app/: .env.example  dump.rdb  prestart.sh  pyproject.toml  tests-start.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2023121349_create_item_model_cdc6f60fec88.py  2023121349_create_user_model_fe25da1bbe55.py  2023121514__00d1efae244f.py  2023121516__4a3d7885297d.py  2023121700__880fbc3fab2d.py
backend/app/app/: conftest.py  initial_data.py  main.py  models.py  tests_pre_start.py  utils.py
backend/app/app/api/: api.py  deps.py  utils.py
backend/app/app/api/routers/: auth.py  items.py  users.py
backend/app/app/core/: celery_app.py  config.py  security.py  token_utils.py
backend/app/app/crud/: base.py  item.py  user.py
backend/app/app/db/: database.py  init_db.py  session.py
backend/app/app/email-templates/build_html/: new_account.html  reset_password.html
backend/app/app/email-templates/src/: new_account.mjml  reset_password.mjml
backend/app/app/models/: __init__.py  auth.py  base_uuid_model.py  item.py  user.py
backend/app/app/schemas/: auth.py  item.py  user.py
backend/app/app/scripts/: test.sh
backend/app/app/tests/: conftest.py
backend/app/app/tests/api/: test_auth.py  test_items.py  test_users.py
backend/app/app/tests/api/api_v1/: test_auth.py  test_items.py  test_users.py
backend/app/app/tests/crud/: test_item.py  test_user.py
backend/app/app/tests/utils/: item.py  user.py  utils.py
scripts/: test.sh
